# aws-local

./: .gitignore  .pre-commit-config.yaml  README.md
.github/workflows/: ci.yml
ambient-weather-ha/: .env.example  Dockerfile  README.md  main.py  pyproject.toml  tox.ini
ambient-weather-ha/app/: config.py  ha_client.py  main.py  metadata.py  models.py
ambient-weather-ha/tests/: test_main.py  test_metadata.py
